--- a/base/Makefile
+++ b/base/Makefile
@@ -1,13 +1,12 @@
 CC=g++
+SRC=${wildcard  *.cpp}
+OBJ=${patsubst %.cpp,%.o,${SRC}}
 
-libbase.a: cpp_filter.o term.o
-	ar -r libbase.a cpp_filter.o term.o
+libbase.a: $(OBJ)
+	ar -r libbase.a $(OBJ)
 
-cpp_filter.o: cpp_filter.cpp
-	$(CC) -o cpp_filter.o -c cpp_filter.cpp
-
-term.o: term.cpp
-	$(CC) -o term.o -c term.cpp
+%.o: %.cpp
+	$(CC) -std=c++11 -c $< -o $@
 
 clear:
 	rm -rf *.o *.a
