--- a/item01/Makefile
+++ b/item01/Makefile
@@ -1,11 +1,15 @@
 CC=g++
-CFLAGS=-I../base
+CFLAGS=--std=c++11 -I../base
 LFLAGS=-L../base -lbase
 
 all: demo01
 
+base:
+	$(MAKE) -C ../base
 
-demo01: demo01.cpp
+demo01: base demo01.cpp
 	$(CC) -o demo01 demo01.cpp $(CFLAGS) $(LFLAGS)
 
+
 .PHONY:all
+.PHONY:base
