--- a/item01/Makefile
+++ b/item01/Makefile
@@ -2,7 +2,7 @@ CC=g++
 CFLAGS=--std=c++11 -I../base
 LFLAGS=-L../base -lbase
 
-all: demo01 demo02
+all: demo01 demo02 demo03
 
 base:
 	$(MAKE) -C ../base
@@ -13,6 +13,8 @@ demo01: base demo01.cpp
 demo02: base demo02.cpp
 	$(CC) -o demo02 demo02.cpp $(CFLAGS) $(LFLAGS)
 
+demo03: base demo03.cpp
+	$(CC) -o demo03 demo03.cpp $(CFLAGS) $(LFLAGS)
 
 .PHONY:all
 .PHONY:base
