--- a/item01/Makefile
+++ b/item01/Makefile
@@ -2,7 +2,7 @@ CC=g++
 CFLAGS=--std=c++11 -I../base
 LFLAGS=-L../base -lbase
 
-all: demo01 demo02 demo03
+all: demo01 demo02 demo03 demo04
 
 base:
 	$(MAKE) -C ../base
@@ -15,6 +15,9 @@ demo02: base demo02.cpp
 
 demo03: base demo03.cpp
 	$(CC) -o demo03 demo03.cpp $(CFLAGS) $(LFLAGS)
+	
+demo04: base demo04.cpp
+	$(CC) -o demo04 demo04.cpp $(CFLAGS) $(LFLAGS)
 
 .PHONY:all
 .PHONY:base
