add universal reference; add makefile; add readme

--- a/item01/Makefile
+++ b/item01/Makefile
@@ -2,22 +2,24 @@ CC=g++
 CFLAGS=--std=c++11 -I../base
 LFLAGS=-L../base -lbase
 
-all: demo01 demo02 demo03 demo04
+all: demo01 demo02 demo03 demo04 demo05
 
-base:
+../base/libbase.a: ../base
 	$(MAKE) -C ../base
 
-demo01: base demo01.cpp
+demo01: ../base/libbase.a demo01.cpp
 	$(CC) -o demo01 demo01.cpp $(CFLAGS) $(LFLAGS)
 
-demo02: base demo02.cpp
+demo02: ../base/libbase.a demo02.cpp
 	$(CC) -o demo02 demo02.cpp $(CFLAGS) $(LFLAGS)
 
-demo03: base demo03.cpp
+demo03: ../base/libbase.a demo03.cpp
 	$(CC) -o demo03 demo03.cpp $(CFLAGS) $(LFLAGS)
 	
-demo04: base demo04.cpp
+demo04: ../base/libbase.a demo04.cpp
 	$(CC) -o demo04 demo04.cpp $(CFLAGS) $(LFLAGS)
 
+demo05: ../base/libbase.a demo05.cpp
+	$(CC) -o demo05 demo05.cpp $(CFLAGS) $(LFLAGS)
+
 .PHONY:all
-.PHONY:base
